Email Otp implementation

--- a/SPRING-SECURITY/src/main/resources/application.properties
+++ b/SPRING-SECURITY/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jpa.show-sql=true
 #spring.security.user.password=Abhishek@123
 #spring.security.user.name=Abhishek
 #spring.security.user.roles=admin
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xya@gmail.com
+spring.mail.password=hphz vome ooip dwvo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
